syntax = "proto3";
option java_package = "edu.usfca.cs.rfs";

message ReaddirRequest {
    string path = 1;
}

message ReaddirResponse {
    int32 status = 1;
    repeated string contents = 2;
}

message GetattrRequest {
    string path = 1;
}

message GetattrResponse {
    int32 status = 1;
    int32 mode = 2;
    int64 size = 3;
}

message OpenRequest {
    string path = 1;
}

message OpenResponse {
    int32 status = 1;
}

message ReadRequest {
    string path = 1;
    int64 size = 2;
    int64 offset = 3;
}

message ReadResponse {
    int32 status = 1;
    bytes contents = 2;
}

message RfsMessageWrapper {
    oneof msg {
        ReaddirRequest  readdir_req  = 1;
        ReaddirResponse readdir_resp = 2;
        GetattrRequest  getattr_req  = 3;
        GetattrResponse getattr_resp = 4;
        OpenRequest     open_req     = 5;
        OpenResponse    open_resp    = 6;
        ReadRequest     read_req     = 7;
        ReadResponse    read_resp    = 8;
    }
}
